--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -1,3 +1,15 @@
 application.langs="en"
 
-play.crypto.secret="U3spB5^7L;EK_:<=OKxwpOJGM:0JsAyTu2pWhKsqbiGMO@tT_8voDNs:x7q=x?e<"
+play.http.secret.key="U3spB5^7L;EK_:<=OKxwpOJGM:0JsAyTu2pWhKsqbiGMO@tT_8voDNs:x7q=x?e<"
+
+play {
+  modules {
+    enabled += "be.objectify.deadbolt.scala.DeadboltModule"
+    enabled += "modules.CustomDeadboltHook"
+    enabled += "security.CustomDeadboltFilterHook"
+  }
+}
+
+play.filters.headers {
+  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://apis.google.com https://accounts.google.com/; img-src *; script-src 'self' 'unsafe-inline' https://apis.google.com"
+}
