Authorisation with Google now working correctly

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -13,3 +13,8 @@ play {
 play.filters.headers {
   contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://apis.google.com https://accounts.google.com/; img-src *; script-src 'self' 'unsafe-inline' https://apis.google.com"
 }
+
+play.filters.csrf.header.bypassHeaders {
+  X-Requested-With = "*"
+  Csrf-Token = "nocheck"
+}
