added signup page

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -18,3 +18,9 @@ play.filters.csrf.header.bypassHeaders {
   X-Requested-With = "*"
   Csrf-Token = "nocheck"
 }
+
+services {
+  user-service-host = ${?USER_READER_SERVICE_HOST}
+  user-service-port = ${?USER_READER_SERVICE_PORT}
+
+}
