populate the Schools from schools service

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -23,4 +23,7 @@ services {
   user-service-host = ${?USER_READER_SERVICE_HOST}
   user-service-port = ${?USER_READER_SERVICE_PORT}
 
+  user-service-host = ${?SCHOOL_READER_SERVICE_HOST}
+  user-service-port = ${?SCHOOL_READER_SERVICE_PORT}
+
 }
