basics of logging in via Google now complete

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -23,7 +23,10 @@ services {
   user-service-host = ${?USER_READER_SERVICE_HOST}
   user-service-port = ${?USER_READER_SERVICE_PORT}
 
-  user-service-host = ${?SCHOOL_READER_SERVICE_HOST}
-  user-service-port = ${?SCHOOL_READER_SERVICE_PORT}
+  user-writer-host = ${?USER_WRITER_SERVICE_HOST}
+  user-writer-port = ${?USER_WRITER_SERVICE_PORT}
+
+  school-reader-service-host = ${?SCHOOL_READER_SERVICE_HOST}
+  school-reader-service-port = ${?SCHOOL_READER_SERVICE_PORT}
 
 }
