--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -11,7 +11,7 @@ play {
 }
 
 play.filters.headers {
-  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://apis.google.com https://accounts.google.com/; img-src *; script-src 'self' 'unsafe-inline' https://apis.google.com"
+  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src *; script-src 'self' 'unsafe-inline' https://apis.google.com https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com"
 }
 
 play.filters.csrf.header.bypassHeaders {
