--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -14,6 +14,12 @@ play.filters.headers {
   contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://weareoutman.github.io https://www.youtube.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://apis.google.com https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
 }
 
+play.filters.enabled += play.filters.hosts.AllowedHostsFilter
+play.filters.hosts {
+  # Allow requests to example.com, its subdomains, and localhost:9000.
+  allowed = ["localhost:9000", "127.0.0.1:9000"]
+}
+
 play.filters.csrf.header.bypassHeaders {
   X-Requested-With = "*"
   Csrf-Token = "nocheck"
