Change client id for user login to Google

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -17,7 +17,7 @@ play.filters.headers {
 play.filters.enabled += play.filters.hosts.AllowedHostsFilter
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["localhost:9000", "127.0.0.1:9000"]
+  allowed = ["localhost:9000", "127.0.0.1:9000", "localhost:9443", "127.0.0.1:9443"]
 }
 
 play.filters.csrf.header.bypassHeaders {
@@ -26,13 +26,13 @@ play.filters.csrf.header.bypassHeaders {
 }
 
 services {
-  user-service-host = ${?USER_READER_SERVICE_HOST}
-  user-service-port = ${?USER_READER_SERVICE_PORT}
+  user-service-host = ${USER_READER_SERVICE_HOST}
+  user-service-port = ${USER_READER_SERVICE_PORT}
 
-  user-writer-host = ${?USER_WRITER_SERVICE_HOST}
-  user-writer-port = ${?USER_WRITER_SERVICE_PORT}
+  user-writer-host = ${USER_WRITER_SERVICE_HOST}
+  user-writer-port = ${USER_WRITER_SERVICE_PORT}
 
-  school-reader-service-host = ${?SCHOOL_READER_SERVICE_HOST}
-  school-reader-service-port = ${?SCHOOL_READER_SERVICE_PORT}
+  school-reader-service-host = ${SCHOOL_READER_SERVICE_HOST}
+  school-reader-service-port = ${SCHOOL_READER_SERVICE_PORT}
 
 }
