--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -14,6 +14,8 @@ play.server.https.keyStore.path = "/etc/ssl/cacerts"
 play.server.https.keyStore.type = "JKS"
 play.server.https.keyStore.password = "the8balL"
 
+play.ws.ssl.loose.acceptAnyCertificate=true
+
 play.filters.headers {
   contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://weareoutman.github.io https://www.youtube.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://apis.google.com https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
 }
