--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -11,7 +11,7 @@ play {
 }
 
 play.server.https.keyStore.path = "/etc/ssl/cacerts"
-play.server.https.keyStore.type = "JKS"
+play.server.https.keyStore.type = "PEM"
 play.server.https.keyStore.password = "the8balL"
 
 play.ws.ssl.loose.acceptAnyCertificate=true
