--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -10,7 +10,7 @@ play {
   }
 }
 
-play.server.https.keyStore.path = "/etc/ssl/cacerts"
+play.server.https.keyStore.path = "/etc/tls/cacerts"
 play.server.https.keyStore.type = "PEM"
 play.server.https.keyStore.password = "the8balL"
 
