lets try without cert

--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -10,9 +10,9 @@ play {
   }
 }
 
-play.server.https.keyStore.path = "/etc/tls/cacerts"
-play.server.https.keyStore.type = "PEM"
-play.server.https.keyStore.password = "the8balL"
+//play.server.https.keyStore.path = "/etc/tls/cacerts"
+//play.server.https.keyStore.type = "PEM"
+//play.server.https.keyStore.password = "the8balL"
 
 play.ws.ssl.loose.acceptAnyCertificate=true
 
