--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -10,6 +10,14 @@ play {
   }
 }
 
+ssl-config {
+  trustManager = {
+    stores = [
+      { type = "PEM", path = "/etc/tls/ca.crt" }
+    ]
+  }
+}
+
 play.server.https.keyStore.path="/etc/tls/server.keystore"
 play.server.https.keyStore.password="the8balL"
 
