--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -48,9 +48,15 @@ ssl-config {
   trustManager = {
     stores = [
       { type = "PEM", path = "/etc/tls/ca.crt" }
+      { type = "PEM", path = "/etc/tls/server.crt" }
     ]
   }
 }
+
+ssl-config.loose.acceptAnyCertificate=true
+ssl-config.loose.allowWeakCiphers=true
+ssl-config.loose.disableHostnameVerification=true
+ssl-config.loose.allowWeakProtocols=true
 
 ssl-config.debug = {
   # Turn on all debugging
