--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -44,6 +44,15 @@ services {
 
 logger.play.api.libs.ws.ssl=DEBUG
 
+ssl-config {
+  trustManager = {
+    stores = [
+      { type = "PEM", path = "/etc/tls/ca.crt" }
+      { type = "PEM", path = "/etc/tls/server.crt" }
+    ]
+  }
+}
+
 ssl-config.loose.acceptAnyCertificate=true
 ssl-config.loose.allowWeakCiphers=true
 ssl-config.loose.disableHostnameVerification=true
