--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -11,7 +11,7 @@ play {
 }
 
 play.filters.headers {
-  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://weareoutman.github.io https://www.youtube.com/ https://staticxx.facebook.com/ https://www.facebook.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://apis.google.com https://graph.facebook.com https://connect.facebook.net https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
+  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://weareoutman.github.io https://www.youtube.com/ https://staticxx.facebook.com/ https://www.facebook.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://apis.google.com http://connect.facebook.net https://graph.facebook.com https://connect.facebook.net https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
 }
 
 play.filters.enabled += play.filters.hosts.AllowedHostsFilter
@@ -23,6 +23,13 @@ play.filters.hosts {
 play.filters.csrf.header.bypassHeaders {
   X-Requested-With = "*"
   Csrf-Token = "nocheck"
+}
+
+login.details {
+  facebook {
+    timetoteach-facebook-id = ${TIMETOTEACH_FACEBOOK_ID}
+    timetoteach-facebook-secret = ${TIMETOTEACH_FACEBOOK_SECRET}
+  }
 }
 
 services {
@@ -49,6 +56,7 @@ ssl-config {
     stores = [
       { type = "PEM", path = "/etc/tls/ca.crt" }
       { type = "PEM", path = "/etc/tls/server.crt" }
+      { path: ${java.home}/lib/security/cacerts }
     ]
   }
 }
