--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -32,6 +32,11 @@ login.details {
   }
 }
 
+feature.toggles {
+  front-page-feature-sections = "false"
+  front-page-feature-sections = ${?SHOW_FRONT_PAGE_FEATURES}
+}
+
 services {
   user-service-host = ${USER_READER_SERVICE_HOST}
   user-service-port = ${USER_READER_SERVICE_PORT}
