--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -71,41 +71,41 @@ ssl-config.loose.allowWeakCiphers=true
 ssl-config.loose.disableHostnameVerification=true
 ssl-config.loose.allowWeakProtocols=true
 
-ssl-config.debug = {
-  # Turn on all debugging
-  all = true
-  # Turn on ssl debugging
-  ssl = true
-  # Turn certpath debugging on
-  certpath = true
-  # Turn ocsp debugging on
-  ocsp = true
-  # Enable per-record tracing
-  record = true
-  # hex dump of record plaintext, requires record to be true
-  plaintext = true
-  # print raw SSL/TLS packets, requires record to be true
-  packet = true
-  # Print each handshake message
-  handshake = true
-  # Print hex dump of each handshake message, requires handshake to be true
-  data = true
-  # Enable verbose handshake message printing, requires handshake to be true
-  verbose = true
-  # Print key generation data
-  keygen = true
-  # Print session activity
-  session = true
-  # Print default SSL initialization
-  defaultctx = true
-  # Print SSLContext tracing
-  sslctx = true
-  # Print session cache tracing
-  sessioncache = true
-  # Print key manager tracing
-  keymanager = true
-  # Print trust manager tracing
-  trustmanager = true
-  # Turn pluggability debugging on
-  pluggability = true
-}
+//ssl-config.debug = {
+//  # Turn on all debugging
+//  all = true
+//  # Turn on ssl debugging
+//  ssl = true
+//  # Turn certpath debugging on
+//  certpath = true
+//  # Turn ocsp debugging on
+//  ocsp = true
+//  # Enable per-record tracing
+//  record = true
+//  # hex dump of record plaintext, requires record to be true
+//  plaintext = true
+//  # print raw SSL/TLS packets, requires record to be true
+//  packet = true
+//  # Print each handshake message
+//  handshake = true
+//  # Print hex dump of each handshake message, requires handshake to be true
+//  data = true
+//  # Enable verbose handshake message printing, requires handshake to be true
+//  verbose = true
+//  # Print key generation data
+//  keygen = true
+//  # Print session activity
+//  session = true
+//  # Print default SSL initialization
+//  defaultctx = true
+//  # Print SSLContext tracing
+//  sslctx = true
+//  # Print session cache tracing
+//  sessioncache = true
+//  # Print key manager tracing
+//  keymanager = true
+//  # Print trust manager tracing
+//  trustmanager = true
+//  # Turn pluggability debugging on
+//  pluggability = true
+//}
