--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -11,7 +11,7 @@ play {
 }
 
 play.filters.headers {
-  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://weareoutman.github.io https://syndication.twitter.com https://platform.twitter.com https://www.youtube.com/ https://staticxx.facebook.com/ https://www.facebook.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://apis.google.com https://platform.twitter.com http://connect.facebook.net https://graph.facebook.com https://connect.facebook.net https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
+  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://weareoutman.github.io https://web.facebook.com/ https://syndication.twitter.com https://platform.twitter.com https://www.youtube.com/ https://staticxx.facebook.com/ https://www.facebook.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://apis.google.com https://platform.twitter.com http://connect.facebook.net https://graph.facebook.com https://connect.facebook.net https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
 }
 
 play.filters.enabled += play.filters.hosts.AllowedHostsFilter
