--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -47,6 +47,8 @@ services {
   school-reader-service-host = ${SCHOOL_READER_SERVICE_HOST}
   school-reader-service-port = ${SCHOOL_READER_SERVICE_PORT}
 
+  classtimetable-writer-host = ${CLASSTIMETABLE_WRITER_SERVICE_HOST}
+  classtimetable-writer-port = ${CLASSTIMETABLE_WRITER_SERVICE_PORT}
 }
 
 //play.server.https.keyStore.path="/etc/tls/server.keystore"
