--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -49,6 +49,9 @@ services {
 
   classtimetable-writer-host = ${CLASSTIMETABLE_WRITER_SERVICE_HOST}
   classtimetable-writer-port = ${CLASSTIMETABLE_WRITER_SERVICE_PORT}
+
+  classtimetable-reader-host = ${CLASSTIMETABLE_READER_SERVICE_HOST}
+  classtimetable-reader-port = ${CLASSTIMETABLE_READER_SERVICE_PORT}
 }
 
 //play.server.https.keyStore.path="/etc/tls/server.keystore"
