--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -10,6 +10,21 @@ play {
   }
 }
 
+play.mailer {
+  host = "smtp.gmail.com" // (mandatory)
+  port = 587
+  ssl = false
+  tls = true
+  tlsRequired = true
+  user = "NoReply@timetoteach.zone"
+  password = ${TIMETOTEACH_NO_REPLY_PASSWORD}
+  debug = no
+  timeout = null
+  connectiontimeout = null
+  mock = no
+}
+
+
 play.filters.headers {
   contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://weareoutman.github.io https://web.facebook.com/ https://syndication.twitter.com https://platform.twitter.com https://www.youtube.com/ https://staticxx.facebook.com/ https://www.facebook.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://apis.google.com https://platform.twitter.com http://connect.facebook.net https://graph.facebook.com https://connect.facebook.net https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
 }
