--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -50,6 +50,9 @@ login.details {
 feature.toggles {
   front-page-feature-sections = "false"
   front-page-feature-sections = ${?SHOW_FRONT_PAGE_FEATURES}
+
+  general-development-toggle = "false"
+  general-development-toggle = ${?GENERAL_DEVELOPMENT_TOGGLE}
 }
 
 services {
