--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -70,6 +70,9 @@ services {
 
   classtimetable-reader-host = ${CLASSTIMETABLE_READER_SERVICE_HOST}
   classtimetable-reader-port = ${CLASSTIMETABLE_READER_SERVICE_PORT}
+
+  es-and-os-reader-host = ${ES_AND_OS_READER_SERVICE_HOST}
+  es-and-os-reader-port = ${ES_AND_OS_READER_SERVICE_PORT}
 }
 
 //play.server.https.keyStore.path="/etc/tls/server.keystore"
