--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -75,6 +75,17 @@ services {
   es-and-os-reader-port = ${ES_AND_OS_READER_SERVICE_PORT}
 }
 
+mongodb {
+  connection_uri = "mongodb://localhost:27017"
+  connection_uri = ${?MONGODB_CONNECTION_URI}
+
+  localmongodb = "true"
+  localmongodb = ${?LOCAL_MONGO_DB}
+
+  planning-database-name = "planning"
+  termly-planning-collection-name = "termly"
+}
+
 //play.server.https.keyStore.path="/etc/tls/server.keystore"
 //play.server.https.keyStore.password="the8balL"
 //
