--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -83,7 +83,8 @@ mongodb {
   localmongodb = ${?LOCAL_MONGO_DB}
 
   planning-database-name = "planning"
-  termly-planning-collection-name = "termly"
+  termly-plans-collection-name = "termly.plans"
+  termly-curriculum-selection-collection-name = "termly.curriculum.selection"
 }
 
 //play.server.https.keyStore.path="/etc/tls/server.keystore"
