--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -7,6 +7,7 @@ play {
     enabled += "be.objectify.deadbolt.scala.DeadboltModule"
     enabled += "modules.CustomDeadboltHook"
     enabled += "security.CustomDeadboltFilterHook"
+    enabled += "com.builtamont.ApplicationModule"
   }
 }
 
