--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -2,6 +2,11 @@ application.langs="en"
 
 play.http.secret.key="U3spB5^7L;EK_:<=OKxwpOJGM:0JsAyTu2pWhKsqbiGMO@tT_8voDNs:x7q=x?e<"
 
+play.assets {
+  path = "/public"
+  urlPrefix = "/assets"
+}
+
 play {
   modules {
     enabled += "be.objectify.deadbolt.scala.DeadboltModule"
