--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -32,21 +32,58 @@ play.mailer {
 
 
 play.filters.headers {
-  contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://*.hotjar.com:*/ https://z-p3-graph.facebook.com/ https://*.facebook.com/   https://facebook.com/ https://z-m-graph.facebook.com/ https://graph.facebook.com/ https://weareoutman.github.io https://web.facebook.com/ https://syndication.twitter.com https://platform.twitter.com https://www.youtube.com/ https://staticxx.facebook.com/ https://www.facebook.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://*.hotjar.com/ https://z-m-graph.facebook.com/ https://apis.google.com https://platform.twitter.com http://connect.facebook.net https://graph.facebook.com https://connect.facebook.net https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
+  #contentSecurityPolicy="default-src 'self' 'unsafe-inline' https://*.hotjar.com:*/ https://z-p3-graph.facebook.com/ https://*.facebook.com/   https://facebook.com/ https://z-m-graph.facebook.com/ https://graph.facebook.com/ https://weareoutman.github.io https://web.facebook.com/ https://syndication.twitter.com https://platform.twitter.com https://www.youtube.com/ https://staticxx.facebook.com/ https://www.facebook.com/ https://cdnjs.cloudflare.com https://code.jquery.com https://ajax.googleapis.com https://apis.google.com https://accounts.google.com/ https://maxcdn.bootstrapcdn.com; img-src 'self' data: * ; script-src 'self' 'unsafe-inline' https://*.hotjar.com/ https://z-m-graph.facebook.com/ https://apis.google.com https://platform.twitter.com http://connect.facebook.net https://graph.facebook.com https://connect.facebook.net https://weareoutman.github.io https://ajax.googleapis.com https://maxcdn.bootstrapcdn.com https://code.jquery.com https://cdnjs.cloudflare.com"
+  contentSecurityPolicy=null
+  # The X-Frame-Options header. If null, the header is not set.
+  frameOptions = "DENY"
+
+  # The X-XSS-Protection header. If null, the header is not set.
+  xssProtection = null
+
+  # The X-Content-Type-Options header. If null, the header is not set.
+  contentTypeOptions = null
+
+  # The X-Permitted-Cross-Domain-Policies header. If null, the header is not set.
+  permittedCrossDomainPolicies = null
+
+  # The Referrer-Policy header. If null, the header is not set.
+  referrerPolicy = null
+
+  # If true, allow an action to use .withHeaders to replace one or more of the above headers
+  allowActionSpecificHeaders = true
 }
 
+
 play.filters.cors {
-  pathPrefixes = ["*", ...]
-  allowedOrigins = ["*"]
-  allowedHttpMethods = ["GET", "POST"]
-  allowedHttpHeaders = ["Accept"]
+  # The path prefixes to filter.
+  pathPrefixes = ["/"]
+
+  # The allowed origins. If null, all origins are allowed.
+  allowedOrigins = null
+
+  # The allowed HTTP methods. If null, all methods are allowed
+  allowedHttpMethods = null
+
+  # The allowed HTTP headers. If null, all headers are allowed.
+  allowedHttpHeaders = null
+
+  # The exposed headers
+  exposedHeaders = []
+
+  # Whether to support credentials
+  supportsCredentials = false
+
+  # The maximum amount of time the CORS meta data should be cached by the client
   preflightMaxAge = 3 days
+
+  # Whether to serve forbidden origins as non-CORS requests
+  serveForbiddenOrigins = true
 }
 
 play.filters.enabled += play.filters.hosts.AllowedHostsFilter
 play.filters.hosts {
   # Allow requests to example.com, its subdomains, and localhost:9000.
-  allowed = ["localhost:9000", "127.0.0.1:9000", "localhost:9443", "127.0.0.1:9443"]
+  allowed = ["."]
 }
 
 play.filters.csrf.header.bypassHeaders {
