--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -136,6 +136,9 @@ mongodb {
   planning-database-name = "planning"
   termly-plans-collection-name = "termly.plans"
   termly-curriculum-selection-collection-name = "termly.curriculum.selection"
+
+  calendar-database-name = "calendar"
+  school-terms-collection-name = "localauthority.terms"
 }
 
 //play.server.https.keyStore.path="/etc/tls/server.keystore"
