--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -139,6 +139,9 @@ mongodb {
 
   calendar-database-name = "calendar"
   school-terms-collection-name = "localauthority.terms"
+
+  system-time-database-name = "systemtime"
+  system-date-collection-name = "systemdate"
 }
 
 //play.server.https.keyStore.path="/etc/tls/server.keystore"
