--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -136,6 +136,8 @@ mongodb {
   planning-database-name = "planning"
   termly-plans-collection-name = "termly.plans"
   termly-curriculum-selection-collection-name = "termly.curriculum.selection"
+  weekly-plans-collection-name = "weekly.plans"
+  lesson-plans-collection-name = "lesson.plans"
 
   calendar-database-name = "calendar"
   school-terms-collection-name = "localauthority.terms"
