--- a/server/conf/application.conf
+++ b/server/conf/application.conf
@@ -138,6 +138,8 @@ mongodb {
   termly-curriculum-selection-collection-name = "termly.curriculum.selection"
   weekly-plans-collection-name = "weekly.plans"
   lesson-plans-collection-name = "lesson.plans"
+  lesson-plans-collection-name = "lesson.plans"
+  eando-benchmark-status-collection-name = "eando.benchmark.status"
 
   calendar-database-name = "calendar"
   school-terms-collection-name = "localauthority.terms"
